# lightfall

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  docs.yml  release.yml
config/defaults/: application.yaml
config/schemas/: config_schema.json
docs/: conf.py  index.md  ipc-architecture.md  ipc-client-guide.md  pyqtgraph-notes.md  remote-epics-access.md
docs/api/: index.md  panels.md  plans.md  plugins.md  visualization.md
docs/developer-guide/: architecture.md  deployment.md  index.md  ipc-architecture.md  ipc-client-guide.md
docs/investigations/: 2026-05-27-schedulewakeup-in-lightfall.md  2026-05-27-schedulewakeup-in-lucid.md
docs/plans/: 2026-01-30-plan-tools-mcp-plugin-design.md  2026-01-30-sim-areadetector.md  2026-01-31-queue-panel-design.md  2026-04-04-device-editing-design.md  2026-04-04-device-editing-plan.md  user-settings-sync.md
docs/plugins/: creating-plugins.md  external-packages.md  index.md  manifest-reference.md  quickstart.md
docs/user/: claude-assistant.md  getting-started.md  login.md  panels.md  preferences.md  running-plans.md
docs/user-guide/: agent-customization.md  claude-assistant.md  first-session.md  getting-started.md  index.md  logbook.md  login.md  panels.md  preferences.md  running-plans.md
examples/: icon_strip_sidebar_mwe.py  logbook_demo.py  test_bold_auto.py  test_bold_paragraphs.py  test_position_mapping.py
resources/: gov.lbl.als.lightfall.desktop  gov.lbl.als.lucid.desktop  lucid.icns
scripts/: briefcase-build.ps1  briefcase-build.sh  build-wheels.ps1  build-wheels.sh  demo_autonomous_experiment.py  diag_live.py  fix_happi_xicam.py  spike_stream_viz.py
src/lightfall/: __init__.py  __main__.py  _version.py  main.py
src/lucid/: __init__.py  __main__.py  _version.py  main.py
src/ncs/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_access_stamper.py  test_alshub_client.py  test_annotations.py  test_catalog_mark_device_live.py  test_compact_motor.py  test_connection_manager.py  test_dark_frame_manager.py  test_device_backend_catalog.py  test_device_backend_selection.py  test_device_editing.py  test_device_panel_tabs.py  test_device_selection_model.py  test_device_selector_dialog.py  test_device_tree_model.py  test_device_tree_tab.py  test_engine.py  test_engine_plugin.py  test_exit_code.py  test_export_dialog.py  test_favorites_tab.py  test_image_helpers.py  test_log_buffer.py  test_logbook_client_auth.py  test_logbook_delete_sync.py  test_logbook_live_updates.py  test_logbook_sync_scoping.py  test_logbook_url.py  test_logging.py  test_main.py  test_ophyd_image_view.py  test_ophyd_widgets.py  test_packaging.py  test_post_login_plugin_loading.py  test_preference_backend.py  test_preferences_manager.py  test_runengine.py  test_runengine_control.py  test_sample_metadata_dialog.py  (+9 more)
tests/acquire/: test_adaptive_plan.py  test_bluesky_panel_config_tab.py  test_nats_plan_bridge.py  test_plan_ui_framework.py  test_plan_ui_integration.py  test_simple_acquire.py  test_user_plan_service.py
tests/auth/: test_auth_v2_full_roundtrip.py  test_auth_v2_login_mints_logbook.py  test_auth_v2_logout_re_gate.py  test_builtin_auth_plugins.py  test_job_key.py  test_keycloak_cancel.py  test_provider_registry.py  test_revoke_on_exit.py  test_service_key.py  test_service_key_auth.py  test_session_manager_mint.py
tests/claude/: test_agent_disable_betas.py  test_agent_session_wiring.py  test_agent_stop.py  test_cancel_responsiveness.py  test_cockpit_signals.py  test_cockpit_state.py  test_full_session_construction.py  test_lightfall_core_tools_plugin.py  test_logs_tool.py  test_model_effort_options.py  test_ncs_core_tools_plugin.py  test_partial_streaming_worker.py  test_question_request.py  test_session_assembly.py  test_session_capture.py  test_set_model.py  test_task_progress_worker.py  test_transcript_extract.py
tests/devices/: test_async_connect.py  test_backend_hooks.py  test_base_check_connection.py  test_bcs_backend.py  test_catalog_unified_load.py  test_connect_devices.py  test_happi_backend.py  test_mock_backend.py
tests/docking/: conftest.py  test_bluesky_title_bar.py  test_docking_theme.py  test_icon_sidebar.py  test_import_warmup_join.py  test_layout_persistence.py  test_manager_status.py  test_panel_dock_widget.py  test_panel_status.py  test_panel_title_bar.py  test_proactive_init.py  test_proactive_latch.py  test_sidebar_removal.py  test_state_version_restore.py  test_title_bar_actions.py
tests/exporter/: test_converters.py  test_service.py
tests/integration/: _device_flow.py  conftest.py  remote_client.py  test_pipelines_e2e.py  test_remote_control_e2e.py  test_tsuchinoko_e2e.py
tests/integration/_fixtures/passthrough_plugin/: pyproject.toml
tests/integration/_fixtures/passthrough_plugin/src/passthrough_pipeline/: __init__.py  passthrough.ipynb
tests/ipc/: test_actions.py  test_application_local_nats.py  test_capability_channels.py  test_discover_peers.py  test_integration.py  test_local_server.py  test_service.py  test_settings.py  test_trust.py
tests/monitor/: test_acquisition_health.py  test_advisor.py  test_buffer.py  test_context_injection.py  test_data_window.py  test_feed.py  test_loader_wiring.py  test_models.py  test_monitor_plugin.py  test_rate_limiter.py  test_registry.py  test_scheduler.py  test_scheduler_derived.py  test_scheduler_interval_setter.py  test_service.py  test_service_advisor.py
tests/pipelines/: test_client.py
tests/plugins/: fake_auth_plugin.py  test_agent_plugin.py  test_auth_provider_plugin.py  test_builtin_manifest_agents.py  test_device_backend_plugin.py  test_happi_database_plugin.py  test_loader_agent_branch.py  test_loader_auth_provider.py  test_loader_device_backend_branch.py  test_loader_plan_branch.py  test_loader_visualization_branch.py  test_plugin_type_subclass.py  test_user_plugin_service.py
tests/remote/: test_logout_teardown.py  test_protocol.py  test_service_device.py  test_service_plan.py
tests/services/: test_caproxy_lease_service.py  (+7 more)
(+1102 files in other folders)
