[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "lucid"
dynamic = ["version"]
description = "LUCID - Lightsource Unified Control Interface Dashboard"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"
authors = [
    { name = "ALS Controls Team" },
]
keywords = [
    "control-system",
    "data-acquisition",
    "scientific-instruments",
    "beamline",
    "lucid",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "PySide6>=6.6",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "mistune>=3.0",
    "psutil>=5.9",
    "pyqt-toast-notification>=1.0",
    "pyqtgraph>=0.13",
    "qtawesome>=1.3",
    # acquire
    "bluesky>=1.10",
    "ophyd>=1.7",
    # tiled
    "tiled[client]>=0.1.0",
    # keycloak
    "aiohttp>=3.8",
    "aiohttp-socks>=0.8",
    # ipython
    "qtconsole>=5.5",
    "ipykernel>=6.0",
]

[project.optional-dependencies]
bcs = [
    "bcsophyd @ git+https://git.als.lbl.gov/bcs/bluesky/bcsophyd-zmq",
]
claude = [
    "pyside-claude",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-qt>=4.2",
    "ruff>=0.1",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
docs = [
    "sphinx>=7.0,<9.0",
    "myst-parser>=2.0",
    "sphinx-immaterial>=0.12",
]

[project.scripts]
lucid = "lucid.main:cli"

[project.gui-scripts]
lucid-gui = "lucid.main:cli"

[project.urls]
Homepage = "https://github.com/als-computing/lucid"
Documentation = "https://als-computing.github.io/lucid"
Repository = "https://github.com/als-computing/lucid"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"

[tool.hatch.build.hooks.vcs]
version-file = "src/lucid/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lucid"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["lucid"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
qt_api = "pyside6"

[tool.coverage.run]
source = ["src/lucid"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
