[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "lightfall"
dynamic = ["version"]
description = "Lightfall - control system for the ALS facility"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE.md", "LEGAL.md"]
requires-python = ">=3.11"
authors = [
    { name = "ALS Controls Team" },
]
keywords = [
    "control-system",
    "data-acquisition",
    "scientific-instruments",
    "beamline",
    "lightfall",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "PySide6>=6.6",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "sentry-sdk[loguru]>=2.0",
    "mistune>=3.0",
    "psutil>=5.9",
    "pyqttoast-enhanced>=2.0",
    "pyqtgraph>=0.13",
    "qtawesome>=1.3",
    "scipy>=1.11",
    "h5py>=3.0",
    # epics
    "caproto>=1.1",
    # required for caproto to enumerate all interfaces on multi-homed hosts;
    # excluded on macOS: netifaces is unmaintained and ships no arm64 wheels,
    # which blocks briefcase packaging (caproto degrades gracefully without it)
    "netifaces>=0.11; sys_platform != 'darwin'",
    # acquire
    "bluesky>=1.10",
    "ophyd>=1.7",
    # tiled
    "tiled[client]>=0.2.5",
    "bluesky-tiled-plugins>=2.0",
    # networking / proxy support
    "httpx[socks]>=0.27",
    "aiohttp>=3.8",
    "aiohttp-socks>=0.8",
    "PySocks>=1.7",
    # ipython
    "qtconsole>=5.5",
    "ipykernel>=6.0",
    "claude-agent-sdk>=0.2.82",
    "happi>=2.0",
    "nats-py>=2.0",
]

[project.optional-dependencies]
bcs = [
    "bcsophyd @ git+https://git.als.lbl.gov/bcs/bluesky/bcsophyd-zmq",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.24",
    "pytest-qt>=4.2",
    "pytest-httpx>=0.30",
    "ruff>=0.1",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
docs = [
    "sphinx>=7.0,<9.0",
    "myst-parser>=2.0",
    "sphinx-immaterial>=0.12",
]

[project.scripts]
lightfall = "lightfall.main:cli"
lightfall-exporter = "lightfall.exporter.cli:main"

[project.gui-scripts]
lightfall-gui = "lightfall.main:cli"

[project.urls]
Homepage = "https://github.com/als-controls/lightfall"
Documentation = "https://als-controls.github.io/lightfall"
Repository = "https://github.com/als-controls/lightfall"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"

[tool.hatch.build.hooks.vcs]
version-file = "src/lightfall/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lightfall"]

[tool.hatch.build.targets.wheel.force-include]
"src/lightfall/ui/resources/logo.png" = "lightfall/ui/resources/logo.png"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["lightfall"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
qt_api = "pyside6"
asyncio_mode = "auto"
markers = [
    "integration: end-to-end tests against live NATS + bcgtiled + Keycloak; opt in with LIGHTFALL_INTEGRATION=1",
]

[tool.coverage.run]
source = ["src/lightfall"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# =============================================================================
# Briefcase Configuration (Native App Packaging)
# =============================================================================

[tool.briefcase]
project_name = "LUCID"
bundle = "gov.lbl.als"
version = "0.1.0"
url = "https://als.lbl.gov"
author = "ALS Controls Team"
author_email = "controls@lbl.gov"

[tool.briefcase.app.lightfall]
formal_name = "Lightfall"
description = "Advanced Light Source Control System"
long_description = """Lightfall is a modern, unified control system for scientific
data acquisition and hardware controls at the Advanced Light Source facility."""
icon = "resources/lightfall"
sources = ["src/lightfall"]
requires = [
    # Core UI
    "PySide6>=6.6",
    "pyqtgraph>=0.13",
    "qtawesome>=1.3",
    "pyqttoast-enhanced>=2.0",

    # Data/Config
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",

    # Logging & Monitoring
    "loguru>=0.7",
    "sentry-sdk[loguru]>=2.0",
    "psutil>=5.9",

    # Markdown rendering
    "mistune>=3.0",

    # Async/HTTP
    "aiohttp>=3.8",
    "aiohttp-socks>=0.8",

    # Data acquisition
    "bluesky>=1.10",
    "ophyd>=1.7",
    "tiled[client]>=0.2.5",
    "bluesky-tiled-plugins>=2.0",

    # IPython integration
    "qtconsole>=5.5",
    "ipykernel>=6.0",
    "ipython>=8.0",

    # Scientific computing
    "scipy>=1.11",

    # Utilities
    "platformdirs>=4.0",
    "watchfiles>=0.20",
    "python-dotenv>=1.0",
    "typing-extensions>=4.0",
    "cachetools>=5.0",
    "cryptography>=41.0",
    "bidict>=0.23",

    "claude-agent-sdk>=0.2.82",
]

[tool.briefcase.app.lightfall.macOS]
requires = []
# Modern scipy/numpy only ship arm64 wheels for newer macOS targets;
# briefcase's default of 11.0 makes pip find no compatible wheels.
min_os_version = "14.0"
# Scientific stack ships no x86_64 wheels for macOS 14, so a universal2
# build cannot resolve; build Apple Silicon only.
universal_build = false

[tool.briefcase.app.lightfall.windows]
requires = []

[tool.briefcase.app.lightfall.linux]
requires = []
system_requires = []
