[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightfall-pipelines-test-passthrough"
version = "0.0.1"
description = "Minimal pass-through pipeline used by LUCID e2e tests"
requires-python = ">=3.11"
dependencies = [
    "lightfall-pipelines>=0.1.0",
    "numpy>=1.24",
    "scrapbook>=0.5",
    "tiled[client]>=0.2.3",
]

[project.entry-points."lightfall_pipelines.pipeline"]
passthrough = "passthrough_pipeline:PassthroughPipeline"

[tool.hatch.build.targets.wheel]
packages = ["src/passthrough_pipeline"]

[tool.hatch.build.targets.wheel.force-include]
"src/passthrough_pipeline/passthrough.ipynb" = "passthrough_pipeline/passthrough.ipynb"
